objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Article_Confidence__c</fullName>
        <label>Article Confidence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work in Progress</fullName>
                    <default>true</default>
                    <label>Work in Progress</label>
                </value>
                <value>
                    <fullName>Not Validated</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Type_Icon_URL__c</fullName>
        <formula>CASE(RecordType.Name, 
&quot;FAQ&quot;, &quot;https://i.imgur.com/w0mVY5v.png&quot;, 
&quot;Cirrus&quot;, &quot;https://i.imgur.com/hxH3qeq.png&quot;,
&quot;https://i.imgur.com/hxH3qeq.png&quot;)</formula>
        <inlineHelpText>Provides a URL to an icon representing the type of knowledge article.</inlineHelpText>
        <label>Article Type Icon URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_Answer__c</fullName>
        <label>Chat Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FAQ_Answer__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAQ_External_ID__c</fullName>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQ_Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAQ_Question__c</fullName>
        <label>Question</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Featured_in_Communities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicated whether this article should be featured in the org&apos;s communities CMS collections.</description>
        <inlineHelpText>Indicated whether this article should be featured in the org&apos;s communities CMS collections.</inlineHelpText>
        <label>Featured in Communities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KCSArticle_Cause__c</fullName>
        <description>Explains the root cause of the issue.</description>
        <label>Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KCSArticle_Environment__c</fullName>
        <description>Provides details on the environment where the customer is experiencing the issue.</description>
        <label>Environment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KCSArticle_Issue__c</fullName>
        <description>Describes the issue the customer is encountering.</description>
        <label>Issue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KCSArticle_Resolution__c</fullName>
        <description>Describes the steps taken to resolve this issue.</description>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OpenGraph_Image__c</fullName>
        <label>OpenGraph Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenGraph_Type__c</fullName>
        <label>OpenGraph Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenGraph_Url__c</fullName>
        <label>OpenGraph Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdo_scom_visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commerce Visibility</label>
        <type>Checkbox</type>
    </fields>
    <label>Knowledge</label>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>SDO_Knowledge_Cirrus</fullName>
        <active>true</active>
        <label>Cirrus</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Knowledge_FAQ</fullName>
        <active>true</active>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Knowledge_KCSArticle</fullName>
        <active>true</active>
        <label>KCSArticle</label>
    </recordTypes>
</CustomObject>